After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 711428 - rfkill plugin shouldn't auto-start ModemManager
rfkill plugin shouldn't auto-start ModemManager
Status: RESOLVED FIXED
Product: gnome-settings-daemon
Classification: Core
Component: plugins
3.11.x
Other Linux
: Normal normal
: ---
Assigned To: gnome-settings-daemon-maint
gnome-settings-daemon-maint
Depends on:
Blocks:
 
 
Reported: 2013-11-04 17:55 UTC by Aleksander Morgado
Modified: 2013-11-27 10:13 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch. (1.24 KB, patch)
2013-11-04 17:57 UTC, Aleksander Morgado
committed Details | Review

Description Aleksander Morgado 2013-11-04 17:55:49 UTC
It should just watch MM's lifecycle, not request to auto-start it.
Comment 1 Aleksander Morgado 2013-11-04 17:57:28 UTC
Created attachment 258945 [details] [review]
Patch.
Comment 2 Bastien Nocera 2013-11-27 10:13:41 UTC
Pushed to master, sorry about the delay.