rfkill: don't auto-start ModemManager

https://bugzilla.gnome.org/show_bug.cgi?id=711428